# stackwiz-mcp

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  env.example  pyproject.toml  requirements.txt
docs/: AGENT_REFERENCE.md  TECHNICAL_OVERVIEW.md
stackwiz_mcp/: __init__.py  __main__.py  config.py  mcp_server.py  server.py
stackwiz_mcp/models/: __init__.py  stack_models.py
stackwiz_mcp/prompts/: __init__.py  deployment_prompts.py
stackwiz_mcp/resources/: __init__.py  infrastructure.py  stack_configs.py  templates.py
stackwiz_mcp/tools/: README.md  __init__.py  create_stack.py  dns_operations.py  list_stacks.py  manage_dns.py  manage_stack.py  stack_operations.py  validate_config.py
stackwiz_mcp/utils/: __init__.py  health.py  logging.py  stack_utils.py  validation.py
templates/: env-template  pocketbase-env-template  pocketbase-template.yml  stack-template.yml
