[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stackwiz-mcp"
version = "1.0.0"
description = "MCP server for managing Docker service stacks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "StackWiz Team", email = "admin@rbnk.uk"}
]
keywords = ["mcp", "docker", "automation", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "docker>=6.0.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "python-json-logger>=2.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.20.0",
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML",
    "types-aiofiles",
]

[project.scripts]
stackwiz-mcp = "stackwiz_mcp.server:main"

[project.urls]
Homepage = "https://gitea.rbnk.uk/admin/stackwiz-mcp"
Repository = "https://gitea.rbnk.uk/admin/stackwiz-mcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["stackwiz_mcp*", "templates"]

[tool.setuptools.package-data]
stackwiz_mcp = ["py.typed", "templates/*"]

[tool.setuptools.data-files]
"share/stackwiz-mcp/templates" = ["templates/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["stackwiz_mcp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=stackwiz_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/stackwiz_mcp"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false